Working on images not showing issue for Work section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ body.ActiveHome{
  display: grid;
  text-align: center;
  margin-bottom: 10px;
- transition: 0.3s linear;
+ transition: 0.8s linear;
  transform:scale(0.9);
 }
 
